# RoK-Tracker

./: .gitignore  LICENSE  README.md  config.json  dummy_root.py  main.py  package.json  pyproject.toml  requirements_win32.txt  requirements_win64.txt  scanner_sidecar.py
.github/workflows/: release.yml  test_bundle.yml
gui_frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
gui_frontend/src/: App.vue
gui_frontend/src/assets/: main.css
gui_frontend/src/components/: AllianceScanner.vue  BatchScanner.vue  ErrorNotifier.vue  HonorScanner.vue  KingdomScanner.vue  LastBatch.vue  LastGovernor.vue  ScanStatus.vue  SeedScanner.vue  UpdateNotifier.vue
gui_frontend/src/components/ui/alert-dialog/: AlertDialogAction.vue  AlertDialogCancel.vue  AlertDialogContent.vue  index.ts
gui_frontend/src/components/ui/badge/: Badge.vue
gui_frontend/src/components/ui/button/: index.ts
gui_frontend/src/components/ui/card/: Card.vue
gui_frontend/src/components/ui/checkbox/: Checkbox.vue
gui_frontend/src/components/ui/input/: Input.vue
gui_frontend/src/components/ui/progress/: Progress.vue
gui_frontend/src/components/ui/select/: SelectContent.vue  SelectGroup.vue  SelectItem.vue  SelectSeparator.vue  SelectTrigger.vue
gui_frontend/src/components/ui/separator/: Separator.vue
gui_frontend/src/components/ui/switch/: Switch.vue
gui_frontend/src/components/ui/tabs/: TabsContent.vue  TabsList.vue  TabsTrigger.vue
gui_frontend/src/components/ui/tooltip/: TooltipContent.vue
gui_frontend/src/lib/: rok-calculator.ts  tauriClient.ts
gui_frontend/src/pages/: CalculatorPage.vue  ErrorNotFound.vue  ScannerPage.vue  SettingsPage.vue
gui_frontend/src/router/: index.ts  routes.ts
gui_frontend/src/schema/: FullConfig.ts  KingdomAdditionalData.ts  KingdomGovernorData.ts
gui_frontend/src/stores/: config-store.ts  error-store.ts  index.ts  kingdom-store.ts
gui_frontend/src/types/: SidecarEvents.ts
gui_frontend/src/util/: error-mapper.ts  format.ts  rules.ts
roktracker/kingdom/: pandas_handler.py  scanner.py
roktracker/kingdom/types/: additional_data.py  governor_data.py
roktracker/utils/: adb.py  adb_detector.py  exception_handling.py  ocr.py  rok_ui_positions.py
roktracker/utils/types/: full_config.py
scripts/: bundle_sidecar.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  sidecar.rs
