[project]
name = "roktracker"
requires-python = ">=3.14"

dynamic = ["version"]

dependencies = [
    "altgraph==0.17.4",
    "androidviewclient==24.1.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "clr_loader==0.2.7.post0",
    "contourpy==1.3.1",
    "culebratester-client==2.0.73",
    "cycler==0.12.1",
    "et_xmlfile==2.0.0",
    "fonttools==4.55.3",
    "idna==3.10",
    "kiwisolver==1.4.8",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "nuitka>=2.6",
    "numpy>=2.4.0",
    "opencv-python-headless>=4.11.0",
    "openpyxl==3.1.5",
    "ordered-set>=4.1.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathvalidate==3.2.3",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.14.0",
    "pefile==2023.2.7",
    "pillow>=12.0.0",
    "prompt_toolkit==3.0.50",
    "proxy_tools==0.1.0",
    "pycparser==2.22",
    "Pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pythonnet==3.0.5",
    "pytz==2024.2",
    "pywin32-ctypes==0.2.3",
    "questionary==2.1.0",
    "requests==2.32.3",
    "rich==13.9.4",
    "setuptools==75.8.0",
    "six==1.17.0",
    "typing_extensions>=4.14.1",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "XlsxWriter==3.2.0",
    "zstandard>=0.23.0",
    "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp314-cp314-win_amd64.whl ; platform_machine == 'AMD64' or platform_machine == 'x86_64'",
    "tesserocr @ https://github.com/simonflueckiger/tesserocr-windows_build/releases/download/tesserocr-v2.10.0-tesseract-5.5.2/tesserocr-2.10.0-cp314-cp314-win32.whl ; platform_machine == 'x86' or platform_machine == 'i386'",
]
[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade — modernize syntax (e.g. List -> list)
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["roktracker"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.uv]
package = false

[tool.setuptools.packages.find]
where = ["."]
include = ["roktracker*"]
